--- a/configuration/config.Properties
+++ b/configuration/config.Properties
@@ -1,4 +1,4 @@
 testurl=http://automationpractice.com/index.php
 mainpage_username=CCManager
 mainpage_password=password
-browser=firefox
+browser=remote
