--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,35 @@
             <version>0.15</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.github.webdriverextensions</groupId>
+                <artifactId>webdriverextensions-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <configuration>
+                    <drivers>
+                        <driver>
+                            <name>chromedriver</name>
+                            <platform>windows</platform>
+                            <bit>32</bit>
+                            <version>2.22</version>
+                        </driver>
+                    </drivers>
+                    <installationDirectory>${project.basedir}/target/tmp_webdrivers</installationDirectory>
+                    <keepDownloadedWebdrivers>true</keepDownloadedWebdrivers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>webdriver download</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>install-drivers</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
