--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 jdk:
  - oraclejdk8
 install: true
-script: ./mvnw clean install
+sudo: false
+script: mvn clean verify
 cache:
   directories:
   - $HOME/.m2
