--- a/configuration/config.Properties
+++ b/configuration/config.Properties
@@ -1,6 +1,6 @@
 testurl=http://automationpractice.com/index.php
 mainpage_username=CCManager
 mainpage_password=password
-browser=remote
+browser=chrome
 
 
