--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,19 @@ language: java
 jdk:
  - oraclejdk8
 install: true
-sudo: false
+sudo: required
+dist: trusty
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+before_install:
+  - wget https://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip -O /tmp/chromedriver
+  - chmod 777 /tmp/chromedriver
+env:
+  - CHROME_DRIVER_PATH=/tmp/chromedriver
 script: mvn clean verify
 cache:
   directories:
